# koharu

./: Cargo.toml  HOW_PADDLEOCR_WORKS.md  PADDLEOCR_INTEGRATION.md  README.md  RELEASES  RELEASE_GUIDE.md
.github/workflows/: build-release.yml
koharu/: Cargo.toml  tauri.conf.json
koharu/src/: app.rs  command.rs  onnx.rs
paddle-ocr/: Cargo.toml
paddle-ocr/src/: lib.rs  main.rs
scripts/: export_paddleocr_to_onnx.py
ui/components/: Panels.tsx
ui/lib/: paddleocr-integration-example.tsx  store.ts
